--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "node-fetch": "^2.6.0",
     "puppeteer": "^2.0.0",
     "vue": "^2.6.10"
   },
