--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve-80": "vue-cli-service serve --port=80",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
