--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "countup.js": "^2.0.4",
     "element-ui": "^2.12.0",
     "node-fetch": "^2.6.0",
     "puppeteer": "^2.0.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-countup-v2": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
